# weave

./: .gitignore  CMakeLists.txt  CTestCustom.cmake  LICENSE  README.md  cmake-variants.yaml
backup/: value.hpp
weave/: CMakeLists.txt
weave/cancel/: never.cpp  never.hpp  token.hpp
weave/cancel/sources/: fork.hpp  join.hpp  strand.cpp  strand.hpp
weave/coro/: core.cpp  core.hpp  simple.cpp  simple.hpp  simple_coro.cpp  simple_coro.hpp
weave/executors/: executor.hpp  hint.hpp  inline.cpp  inline.hpp  manual.cpp  manual.hpp  prison.cpp  prison.hpp  strand.cpp  strand.hpp  submit.hpp  task.hpp  thread_pool.hpp
weave/executors/fibers/: manual.cpp  manual.hpp  thread_pool.hpp
weave/executors/fibers/tp/: fiber_runner.cpp  fiber_runner.hpp  thread_pool.cpp  thread_pool.hpp
weave/executors/tp/compute/: thread_pool.cpp  thread_pool.hpp
weave/executors/tp/fast/: coordinator.cpp  coordinator.hpp  launch_settings.hpp  logger.hpp  metrics.hpp  picker.hpp  runner.hpp  task_flags.hpp  thread_pool.cpp  thread_pool.hpp  thread_runner.hpp  worker.hpp
weave/executors/tp/fast/queues/: global_queue.hpp  parking_lot.hpp  work_stealing_queue.hpp
weave/executors/tp/fast/worker_impl/: worker_interface.cpp  worker_parking_waking.cpp  worker_picking.cpp  worker_pushing.cpp  worker_stealing.cpp
weave/fibers/core/: awaiter.hpp  fiber.cpp  fiber.hpp  fwd.hpp  handle.cpp  handle.hpp  scheduler.hpp  self.cpp  self.hpp
weave/fibers/sched/: go.hpp  sleep_for.cpp  sleep_for.hpp  suspend.cpp  suspend.hpp  yield.cpp  yield.hpp
weave/fibers/sync/: channel.hpp  event.hpp  mutex.hpp  select.hpp  wait_group.hpp  waiters.hpp
weave/fibers/sync/detail/: meta.hpp
weave/fibers/sync/experimental/lf_chan/: channel.hpp
weave/fibers/sync/experimental/lf_chan/detail/: segment.hpp  waiters.hpp
weave/futures/combine/par/: all.hpp  first.hpp  quorum.hpp  select.hpp
weave/futures/combine/seq/: and_then.hpp  anyway.hpp  box.hpp  flat_map.hpp  flatten.hpp  fork.hpp  map.hpp  on_cancel.hpp  on_success.hpp  or_else.hpp  start.hpp  via.hpp  with_timeout.hpp
weave/futures/make/: after.hpp  contract.hpp  failure.hpp  just.hpp  never.hpp  submit.hpp  value.hpp
weave/futures/model/: cancel_source.hpp  consumer.hpp  context.hpp  evaluation.hpp  output.hpp  thunk.hpp
weave/futures/old_model/: consumer.hpp  output.hpp  thunk.hpp
weave/futures/old_syntax/: bang.hpp  or.hpp  pipe.hpp
weave/futures/old_traits/: cancellable.hpp  is_lazy.hpp  value_of.hpp
weave/futures/old_types/: boxed.hpp  eager.hpp  future.hpp  naked.hpp
weave/futures/run/: await.hpp  detach.hpp  discard.hpp  get.hpp  thread_await.hpp
weave/futures/run/detail/: event.hpp
weave/futures/syntax/: bang.hpp  both.hpp  pipe.hpp
weave/futures/thunks/combine/par/: join.hpp
weave/futures/thunks/combine/par/all/: decl.hpp  tuple.hpp  vector.hpp
weave/futures/thunks/combine/seq/: anyway.hpp  apply.hpp  box.hpp  flatten.hpp  fork.hpp  on_cancel.hpp  on_success.hpp  start.hpp  started.hpp  via.hpp
weave/futures/thunks/detail/: cancel_base.hpp  consumer_base.hpp  shared_state.hpp
weave/futures/thunks/make/: after.hpp  contract.hpp  failure.hpp  just.hpp  never.hpp  not_implemented.hpp  value.hpp
weave/futures/traits/: cancel.hpp  is_lazy.hpp  value_of.hpp
weave/futures/types/: boxed.hpp  eager.hpp  future.hpp  naked.hpp
weave/result/complete/: complete.hpp  input.hpp  output.hpp  wrap.hpp
weave/result/make/: err.hpp  ok.hpp
weave/result/traits/: value_of.hpp
weave/result/types/: error.hpp  result.hpp  status.hpp  unit.hpp
weave/satellite/: logger.hpp  meta_data.hpp  satellite.cpp  satellite.hpp
weave/support/: constructor_bases.hpp  cyclic_buffer.hpp  delayed.hpp  fast_rand.hpp  unbounded_blocking_queue.hpp  word.hpp
weave/threads/blocking/: event.hpp  serial_spinlock.hpp  spinlock.hpp  unbounded_blocking_queue.hpp  wait_group.hpp  work_count.hpp
weave/threads/blocking/stdlike/: condition_variable.hpp  mutex.cpp  mutex.hpp
weave/threads/lockfree/: atomic_array.hpp  count_and_flags.hpp  lock_free_queue.hpp  lock_free_stack.hpp  push_popall_stack.hpp  ref_count.hpp  rendezvous.hpp  tagged_buffer.hpp
weave/threads/lockfree/hazard/: hazard.cpp  manager.hpp  mutator.hpp  thread_state.cpp  thread_state.hpp
weave/threads/lockfull/: serial_spinlock.hpp  spinlock.hpp  wait_group.hpp  work_count.hpp
weave/threads/lockfull/stdlike/: condition_variable.hpp  mutex.cpp  mutex.hpp
weave/timers/: delay.hpp  fwd.hpp  millis.hpp  processor.hpp  timer.hpp
weave/timers/processors/: standalone.hpp  thread_pool_queue.hpp
weave/timers/processors/detail/: thread_pool_queue.hpp
(+99 files in other folders)
